Refresh Token Revoked Functionality Add
